--- a/aboption2.html
+++ b/aboption2.html
@@ -1,15 +1,5 @@
 <html>
 <head>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-64632109-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
 <!-- Google Analytics Content Experiment code -->
 <script>function utmx_section(){}function utmx(){}(function(){var
@@ -25,6 +15,20 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
 </script><script>utmx('url','A/B');</script>
 <!-- End of Google Analytics Content Experiment code -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]$
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a$
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentN$
+  })(window,document,'script','//www.google-analytics.com/an$
+
+  ga('create', 'UA-64632109-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
+
 
 </head>
 <h1>Version 2</h1>
